# rust-api-warp-and-diesel

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-07-28-123034_book_catalog_initial_schema/: up.sql
src/: api.rs  data_access.rs  errors.rs  main.rs  model.rs  schema.rs
